applications/vngenterprise-com/overlays/use1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vngenterprise-com
  namespace: vngenterprise-com
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vngenterprise-com
  template:
    metadata:
      labels:
        app: vngenterprise-com
    spec:
      imagePullSecrets:
        - name: github-pull-secret
      containers:
        - name: app
          image: ghcr.io/vanguard-enterprise/vngenterprise-com:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 768Mi
