applications/vngenterprise-com/overlays/use1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vngenterprise-com
  namespace: vngenterprise-com
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: vngenterprise-com
