applications/vngenterprise-com/overlays/use1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vngenterprise-com
  namespace: vngenterprise-com
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vngenterprise.com`)
      kind: Rule
      services:
        - name: vngenterprise-com
          port: 3000
  tls:
    store:
      name: default
      namespace: traefik
